# mnemonify

./: .dockerignore  .env_sample  .gitignore  Dockerfile  README.md  app.py  params.yaml  pyproject.toml  requirements.txt
scripts/: fetch_wanikani.py  merge_unload.py  predict_after_merge.py  predict_before_merge.py  prepare_prompts.py  train_phi3_mini_4k.py
src/subjects/: ABCSubject.py  KanaVocabularySubject.py  KanjiSubject.py  RadicalSubject.py  VocabularySubject.py
src/templates/: input.py  instructions.py
src/utils/: convert.py  inference.py  text.py
